--- a/00-keyboard.conf
+++ b/00-keyboard.conf
@@ -1,9 +1,6 @@
-Section "InputDevice"
-        Identifier      "Generic Keyboard"
-        Driver          "kbd"
-        Option          "CoreKeyboard"
-        Option          "XkbRules"      "xorg"
-        Option          "XkbModel"      "pc105"
+Section "InputClass"
+        Identifier      "system-keyboard"
+        MatchIsKeyboard "yes"
         Option          "XkbLayout"     "de"
         Option          "XkbVariant"    "nodeadkeys"
 EndSection
